Handle all move types in "Moved" notifications